add services-page and fixed bug

--- a/src/components/home-page/button-down/button-down.pug
+++ b/src/components/home-page/button-down/button-down.pug
@@ -1,4 +1,3 @@
-.nav-button
-  .button-wrapper
-    a.button-down(href="#services")
-    span.visually-hidden down
+a.nav-button(href="#services")
+  .button-down
+  span.visually-hidden down
