--- a/src/components/home-page/header/header.scss
+++ b/src/components/home-page/header/header.scss
@@ -33,7 +33,7 @@
   &__text-box {
     display: inline-block;
     width: 600px;
-    margin: 120px 0 0;
+    padding: 120px 0 0;
     text-align: center;
   }
 
@@ -63,8 +63,8 @@
 
   &__text-prev {
     color: #fff;
-    font-size: 18px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 900;
     letter-spacing: 5px;
     word-spacing: 8px;
     text-transform: uppercase;
