--- a/src/components/services/services.pug
+++ b/src/components/services/services.pug
@@ -3,9 +3,10 @@ section.services-page
   include services-bg-video/services-bg-video
   .continear
     .services-page__text#services
-      dl
+      dl.services-page__utterance
         dt.services-page__author Билл Гейтс
         dd.services-page__quote
           |&ldquo;В будущем на рынке останется два вида компаний: <br>
           |&nbsp;те, кто в Интернете и те, кто вышел из бизнеса&bdquo;
       h2.services-page__heading-future Создаю будущее для вас
+    include cards/cards
