--- a/src/components/home-page/navigation/navigation.scss
+++ b/src/components/home-page/navigation/navigation.scss
@@ -24,7 +24,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-image: radial-gradient($rebeccaPurpleLight, $ultramarine 50%);
+    background-image: radial-gradient($rebeccaPurpleLight, rgba($ultramarine, .9) 50%);
     z-index: 100;
     transition: transform .3s;
   }
