--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -5,26 +5,54 @@
   padding: 0;
   margin: 0;
   overflow: hidden;
+  background-image: url(../img/services-page/services-page-bg-top.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: 100%;
+
+  @import "services-bg-video/services-bg-video";
+
+  &__text {
+    width: 750px;
+    margin: auto;
+    padding-top: 100px;
+    margin-bottom: 100px;
+  }
+
+  &__utterance {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 60px;
+  }
+
+  &__author {
+    color: $darkSeaGreen;
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 0 2px 10px rgba($dark, .3);
+  }
+
+  &__quote {
+    color: $rebeccaPurple;
+    font-size: 22px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    word-spacing: 8px;
+  }
+
+  &__heading-future {
+    color: $ultramarine;
+    font-size: 20px;
+    font-weight: 900;
+    letter-spacing: 5px;
+    word-spacing: 8px;
+    text-transform: uppercase;
+    text-shadow: 0 2px 10px rgba($dark, .6);
+    text-align: center;
+  }
 }
 
-@import "services-bg-video/services-bg-video";
-
-.services-page__text {
-  width: 750px;
-  margin: auto;
-  padding-top: 50px;
-  font-size: 28px;
-  font-weight: 700;
-  // letter-spacing: 2px;
-  // word-spacing: 68px;
-}
-
-.services-page__text dl {
-  padding: 0;
-  margin: 0;
-  margin-bottom: 60px;
-}
-
-.services-page__heading-future {
-  text-align: center;
-}
+@import "cards/cards";
