--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@ extends pug/_layout/layout
 block home-page
   include components/home-page/navigation/navigation
   include components/home-page/header/header
+  include components/home-page/button-down/button-down
 
 block services
   include components/services/services
