--- a/src/components/home-page/navigation/navigation.pug
+++ b/src/components/home-page/navigation/navigation.pug
@@ -6,6 +6,6 @@
   .navigation__background &nbsp;
   nav.navigation__nav
     ul.navigation__list
-      each layer in ["Главная", "Услуги", "Скилы", "Работы", "Отзывы", "Пообщатся"]
+      each layer in ["Главная", "Услуги", "Скилы", "Работы", "Отзывы", "Пообщаться"]
         li.navigation__item
           a.navigation__link(href="#") #{layer}
