--- a/src/components/home-page/header/header.pug
+++ b/src/components/home-page/header/header.pug
@@ -8,5 +8,7 @@ header.header-main
         span.header-main__author Никулина Антона
     .header-main__text-prev
       p Искуство создавать
-
+    
     include ../social/social
+
+    include ../button-down/button-down
