--- a/src/index.pug
+++ b/src/index.pug
@@ -2,10 +2,12 @@ extends pug/_layout/layout
 block home-page
   include components/home-page/navigation/navigation
   include components/home-page/header/header
-  include components/home-page/button-down/button-down
 
 block services
   include components/services/services
+
+block skills
+  include components/skills/skills
 
 
 block svg
