--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,4 @@
 @import "../components/home-page/social/social";
 @import "../components/home-page/button-down/button-down";
 @import "../components/services/services";
+@import "../components/skills/skills";
