--- a/src/components/home-page/navigation/navigation.scss
+++ b/src/components/home-page/navigation/navigation.scss
@@ -54,15 +54,27 @@
   &__item {
     position: relative;
     margin: 10px;
+
+    &:not(:last-child)::after {
+      position: absolute;
+      bottom: -10px;
+      left: 50%;
+      content: "";
+      display: block;
+      width: 40px;
+      height: 5px;
+      margin-left: -20px;
+      background-color: $gainsboro;
+      transition: width .3s ease-in;
+    }
   }
 
   &__link {
     &:link,
     &:visited {
       display: inline-block;
-      width: 200px;
+      width: 220px;
       padding:10px;
-      border-radius: 15px;
       font-size: 25px;
       letter-spacing: 3px;
       color: $white;
