--- a/src/scss/_animations/animations.scss
+++ b/src/scss/_animations/animations.scss
@@ -28,28 +28,45 @@
   }
 }
 
-@keyframes muveButtom {
-  0% {
-    transform: translateY(200px);
-    transform: translateZ();
+@keyframes flipInX {
+  from {
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    animation-timing-function: ease-in;
     opacity: 0;
   }
-  80% {
-    transform: translateY(-20px);
+  40% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    animation-timing-function: ease-in;
   }
-  100% {
-    transform: translateY(0);
+  60% {
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
     opacity: 1;
+  }
+  80% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+  to {
+    transform: perspective(400px);
   }
 }
 
-@keyframes rotating {
-  0% {
-    transform: rotate(0deg);
-    transform: translateZ();
+@keyframes shake {
+  from,
+  to {
+    transform: translate3d(0, 0, 0);
   }
-  100% {
-    transform: rotate(360deg);
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translate3d(-10px, 0, 0);
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translate3d(10px, 0, 0);
   }
 }
 
