--- a/src/scss/_layout/layout.scss
+++ b/src/scss/_layout/layout.scss
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 1170px;
+  min-height: 100%;
 }
 
 body {
@@ -14,10 +14,19 @@ body {
   color: #777;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+}
+
 .continear {
   position: relative;
-  width: 1150px;
-  padding: 0 10px;
+  min-width: 1150px;
+  min-height: 100vh;
+  padding: 0 10px 30px;
   margin: auto;
 }
 
