--- a/src/components/skills/skills.pug
+++ b/src/components/skills/skills.pug
@@ -1,4 +1,7 @@
-section.skills
+section.skills.parallax
   .continear
     h2.skills__title Использую для создания вашего сайта
+      .skills__icon-like
+        svg(viewBox="0 0 100 100")
+            use(xlink:href="img/skills/sprite.svg#like")
     include cards-rotate/cards-rotate
