--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -17,23 +17,18 @@
     text-shadow: 
                 0px 5px 15px $white,
                 0px 10px 25px $dark;
-
-    &::after {
-      position: absolute;
-      right: 50%;
-      top: 120%;
-      margin-top: -8px;
-      margin-right: -24px;
-      display: inline-block;
-      content: "";
-      width: 48px;
-      height: 48px;
-      background-image: url(../img/skills/icon-tehnologi/like.svg);
-      background-repeat: no-repeat;
-      background-position: center;
-      border-radius: 50%;
-      box-shadow: 0px 5px 15px rgba($dark, .5);
-    }
+  }
+  &__icon-like {
+    position: absolute;
+    right: 50%;
+    top: 120%;
+    display: inline-block;
+    margin-top: -8px;
+    margin-right: -24px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    box-shadow: 0px 5px 15px rgba($dark, .5);
   }
 }
 
