--- a/src/scss/_layout/layout.scss
+++ b/src/scss/_layout/layout.scss
@@ -24,7 +24,7 @@ img {
 
 .continear {
   position: relative;
-  min-width: 1150px;
+  width: 1150px;
   min-height: 100vh;
   padding: 0 10px 30px;
   margin: auto;
