--- a/src/components/home-page/header/header.pug
+++ b/src/components/home-page/header/header.pug
@@ -1,4 +1,4 @@
-header.header-main
+header.header-main.parallax-window(data-parallax="scroll" data-image-src="img/home-page/bg-home-page.jpg")
   .continear
     .header-main__logo-box
       img(src='img/home-page/home-page-logo.png' width='100%' alt='Logo-img')
