--- a/src/components/home-page/navigation/navigation.scss
+++ b/src/components/home-page/navigation/navigation.scss
@@ -129,7 +129,7 @@
   }
 
   &__checkbox:checked ~ &__background {
-    transform: scale(100);
+    transform: scale(100) translateZ(0);
   }
 
   &__checkbox:checked ~ &__nav {
