--- a/src/components/home-page/header/header.scss
+++ b/src/components/home-page/header/header.scss
@@ -4,9 +4,8 @@
   height: 100vh;
   background-image: 
                     url(../img/home-page/bg-bottom-home-page.svg),
-                    linear-gradient(to bottom, rgba($rebeccaPurple, 0.8), rgba($darkSeaGreen, 0.8)),
-                    url(../img/home-page/bg-home-page.jpg);
-  background-attachment: local, local, fixed;
+                    linear-gradient(to bottom, rgba($rebeccaPurple, 0.8), rgba($darkSeaGreen, 0.8));
+                    // url(../img/home-page/bg-home-page.jpg);
   background-size: 100%, 100%, cover;
   background-position: bottom, center, center;
   background-repeat: no-repeat;
@@ -19,6 +18,7 @@
     margin-left: -24px;
     width: 48px;
     height: 48px;
+    cursor: pointer;
     animation: shake 1s 1s;
 
     &:active {
