--- a/src/components/services/services-bg-video/services-bg-video.scss
+++ b/src/components/services/services-bg-video/services-bg-video.scss
@@ -6,12 +6,14 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: .15;
+  // opacity: .15;
 
   &__content {
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     font-family: 'object-fit: cover;';
+    z-index: -1;
   }
 }
