--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -4,10 +4,17 @@
   min-height: 100vh;
   padding: 0;
   margin: 0;
-  background-image: url(../img/services-page/services-page-bg-top.svg);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: 100% 90%;
+
+  &__wrapper {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/services-page/services-page-bg-top.svg),
+                    linear-gradient(rgba($white, .9), rgba($white, .7));
+    background-repeat: no-repeat, no-repeat;
+    background-position: top, center;
+    background-size: 100% 90%, 100%;
+  }
 
   &::after {
     position: absolute;
