--- a/src/components/skills/skills.pug
+++ b/src/components/skills/skills.pug
@@ -4,4 +4,4 @@ section.skills.parallax
       .skills__icon-like
         svg(viewBox="0 0 100 100")
             use(xlink:href="img/skills/sprite.svg#like")
-    include cards-rotate/cards-rotate
+    include skill-cards/skill-cards
