--- a/src/pug/_layout/layout.pug
+++ b/src/pug/_layout/layout.pug
@@ -2,7 +2,7 @@
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport", content="width=1200, initial-scale=1.0")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="shortcut icon", href="img/favicon/favicon.png", type="image/png")
     link(href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&amp;subset=cyrillic", rel="stylesheet")
